--- a/main.css
+++ b/main.css
@@ -4,10 +4,22 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-  }
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
   
-  canvas {
+canvas {
     width: 100%;
     height: 100%;
     background: rgb(223, 251, 255);
-  }
+    color: #ffffff00;
+}
+
+.toggle{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: fit-content;
+    height: fit-content;
+    padding: 5px;
+    background-color: rgba(211, 211, 211, 0.9);
+}
