--- a/main.css
+++ b/main.css
@@ -14,12 +14,51 @@ canvas {
     color: #ffffff00;
 }
 
-.toggle{
+.options{
     position: absolute;
     top: 10px;
     left: 10px;
+}
+
+p{
+    margin-bottom: 5px;
+}
+
+.toggle{
     width: fit-content;
     height: fit-content;
-    padding: 5px;
-    background-color: rgba(211, 211, 211, 0.9);
+    padding: 5px 0px;
+    background: #d3d3d3;
+}
+
+.slider {
+    position: absolute;
+    width: 100px;
+    height: 20px;
+    -webkit-appearance: none;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
 }
